k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-comedor-apptv
  labels:
    environment: "produccion"
