k8s-deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apptv-backend
  namespace: web-comedor-apptv
  labels:
    app: apptv-backend
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: apptv-backend
  template:
    metadata:
      labels:
        app: apptv-backend
    spec:
      imagePullSecrets:
      - name: harbor.unicen.edu.ar
      containers:
      - name: backend
        image: harbor.unicen.edu.ar/web/apptv-backend:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: database-storage
          mountPath: /app/data
        - name: uploads-storage
          mountPath: /app/uploads
      volumes:
      - name: database-storage
        persistentVolumeClaim:
          claimName: apptv-database-pvc
      - name: uploads-storage
        persistentVolumeClaim:
          claimName: apptv-uploads-pvc
