k8s-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apptv-frontend
  namespace: web-comedor-apptv
  labels:
    app: apptv-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apptv-frontend
  template:
    metadata:
      labels:
        app: apptv-frontend
    spec:
      imagePullSecrets:
      - name: harbor.unicen.edu.ar
      containers:
      - name: frontend
        image: harbor.unicen.edu.ar/web/apptv-frontend:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: uploads
          mountPath: /usr/share/nginx/html/uploads
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: apptv-uploads-pvc
