k8s-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: apptv-backend-service
  namespace: web-comedor-apptv
spec:
  selector:
    app: apptv-backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: apptv-frontend-service
  namespace: web-comedor-apptv
spec:
  selector:
    app: apptv-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
