k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apptv-ingress
  namespace: web-comedor-apptv
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-traefik"
     # SecRule REQUEST_URI "@beginsWith DELETE /api/qr/" "id:1007,phase:1,pass,nolog,ctl:ruleRemoveById=949110"
    
    #  SecRule REQUEST_URI "@beginsWith DELETE /api/mensajes/" "id:1009,phase:1,pass,nolog,ctl:ruleRemoveById=949110"
    #  SecRule REQUEST_URI "@beginsWith PUT /api/mensajes/" "id:1010,phase:1,pass,nolog,ctl:ruleRemoveById=949110"
      
    # SecRule REQUEST_URI "@beginsWith DELETE /api/imagenes/" "id:1012,phase:1,pass,nolog,ctl:ruleRemoveById=949110"
     # SecRule REQUEST_URI "@beginsWith PUT /api/imagenes/" "id:1013,phase:1,pass,nolog,ctl:ruleRemoveById=949110"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - apptvcomedor.unicen.edu.ar
    secretName: apptvcomedor-tls
  rules:
  - host: apptvcomedor.unicen.edu.ar
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: apptv-backend-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apptv-frontend-service
            port:
              number: 80
